  removed.
* WikiPage::doDeleteArticleReal previously accepted an optional user as its
  fifth parameter, and fell back to $wgUser if not user was provided. The
  signature changed to have the user as the second parameter, and the old
  signature was hard deprecated in 1.35. Support for the old signature has
  now been removed.
* The global function `wfWaitForSlaves`, deprecated in 1.27 and hard-deprecated
  in 1.35, has been removed. Use LBFactory::waitForReplication() instead.
* The global variable $wgMemc, deprecated since 1.35, has been removed.
  Usage should generally be migrated to WANObjectCache, or if you really need
  the internal object, use ObjectCache::getLocalClusterInstance instead.
* CategoryFinder, which was deprecated in 1.31 and hard-deprecated in 1.35,
  has been removed.
* Sanitizer::escapeId(), deprecated in 1.30, has been removed.
* Parser::setFunctionTagHook(), deprecated in 1.35, has been removed.
* The ParserBeforeTidy hook, deprecated in 1.35, has been removed.
* All methods of MWTidy except for MW::tidy() have been removed.  These
  were either @internal or deprecated in 1.35.
* The support for IE8 has been dropped.
* Less mixin `.background-image-svg-quick()` from mediawiki.mixins.less,
  deprecated since 1.35, has been removed.
* The ResourceLoader module `mediawiki.legacy.oldshared` and its file
  'oldshared.css', deprecated since 1.35 has been removed (T248357).
* The LinkBegin and LinkEnd hooks, deprecated in 1.28, have been removed. You
  can instead use the HtmlPageLinkRendererBegin and HtmlPageLinkRendererEnd
  hooks, respectively.
* Skin::getDynamicStylesheetQuery(), deprecated in 1.32, has been removed. You
  should use action=raw&ctype=text/css directly.
* Skin::makeI18nUrl(), deprecated in 1.35, has been removed.
* The following User methods, deprecated and moved to BlockManager in 1.34,
  were removed: isDnsBlacklisted, inDnsBlacklist, isLocallyBlockedProxy,
  trackBlockWithCookie.